--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
             <footer>
                 <div class="container">
                 <p class="copyright">&copy;2017 website by Matthew Hovsepian.</p>
-                <a href="" target="_blank"><i class="fa fa-facebook-square" class="fb" aria-hidden="true"></i></a>
-                <a href="" target="_blank"><i class="fa fa-twitter-square" class="twitter" aria-hidden="true"></i></a>
-                <a href="" target="_blank"><i class="fa fa-instagram" class="ig" aria-hidden="true"></i></a>
+                <a href="https://facebook.com/" target="_blank"><i class="fa fa-facebook-square" class="fb" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter-square" class="twitter" aria-hidden="true"></i></a>
+                <a href="https://instagram.com/" target="_blank"><i class="fa fa-instagram" class="ig" aria-hidden="true"></i></a>
                 </div>
             </footer>
             
